--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>
         Hellow
     </h1>
+    <h2>
+        Hellow2
+    </h2>
     <p>
        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero hic, molestiae tempora magnam deserunt quisquam, animi neque ducimus commodi cupiditate reprehenderit reiciendis. Quisquam, laboriosam velit ab labore mollitia perferendis dignissimos. 
     </p>
