--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>
-        Hellow
+        Hello
     </h1>
     <h2>
-        Hellow2
+        Hello2
     </h2>
     <p>
        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero hic, molestiae tempora magnam deserunt quisquam, animi neque ducimus commodi cupiditate reprehenderit reiciendis. Quisquam, laboriosam velit ab labore mollitia perferendis dignissimos. 
