kontakti_and_tseni

--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,68 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./landing-styles.css">
-    <title>Автосалон Минивенов для путешествий</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./landing-styles.css" />
+    <title>Автосалон минивенов</title>
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="header">
-            <div class="logo">
-                <img src="http://cdn.onlinewebfonts.com/svg/img_571853.png" width="100" height="100" >
-            </div>
-            <div class="nav-menu">
-                <div class="nav-item"><a href="#about">О салоне</a></div>
-                <div class="nav-item">Цены</div>
-                <div class="nav-item">Контакты</div>
-            </div>
+      <div class="header">
+        <div class="logo">
+            <img src="http://cdn.onlinewebfonts.com/svg/img_571853.png" width="100" height="100" >
         </div>
-        <div class="content">
-            <div class="van-bg">
-                <div class="van-bg-text">
-                    VANLIFE - это свобода
-                </div>
-            </div>
-            <div id="about">
-                <div class="title">
-                    О салоне
-                </div>
-                <div class="about-text">
-                    Наш салон - это уникальное предприятие в РФ, в котором вы можете купить машину для путешествий
-                </div>
-                <div class="about-text-bigger">
-                    Почему мы?
-                </div>
+        <div class="nav-menu">
+          <div class="nav-item"><a href="#about">О салоне</a></div>
+          <div class="nav-item"><a href="#about2">Цены</a></div>
+          <div class="nav-item"><a href="#about3">Контакты</a></div>
+        </div>
+      </div>
+      <div class="content">
+        <div class="van-bg">
+          <div class="van-bg-text">
+            VANLIFE - это свобода
+          </div>
+        </div>
+        <div id="about">
+         <div class="title">
+          О салоне
+         </div>
+         <div class="about-text">
+          Наш автосалон - уникальное предприятие в РФ, в котором Вы можете приобрести автомобиль для путешествий!
+         </div>
+         <div class="about-text bigger">
+          Почему мы?
+         </div>
+         <ol>
+            <li>
+              Доступные цены
+            </li>
+            <li>
+              Удобная система скидок
+            </li>
+            <li>
+              Огромный ассортимент
+            </li>
+            <li>
+              Более 10 лет на рынке
+            </li>
+            <li>
+              Филиалы по всей стране
+            </li>
+         </ol>
+         <div class="about-images">
+          <div class="about-images">
+            <img  class="img1" src="https://images-ext-2.discordapp.net/external/z_8yI4aMV0G48lO29IY_Gefa4k_L5dSYzfJBYthbysA/https/carakoom.com/data/wall/787/610b2547.jpg?width=960&height=540" alt="" srcset="">
+          </div>
+          <div class="about-images">
+            <img  class="img2" src="https://images-ext-1.discordapp.net/external/xzmJuIUIlpM_duhPZCyWSat7WN8cXVA4LIqnTrR9IMo/https/domvdorogu.ru/_vehicles/Hymer_Exsis-t_580_2020/additional_pic1_big.jpg" alt="" srcset="">
+          </div>
+         </div>
+        <div id="about2">
+        <div class="title2">
+            Цены
+        </div>
+        <ol>
+            <li>
+                Toyota 2009-10 Sienna_LE - (300.000 руб.)
+            </li>
+        <div class="about-images">
+            <div class="about-images">
+                <img  class="img3" src="https://sun9-16.userapi.com/impg/Tl_tJzy7rq6GXaWxyScbYg_LvIKKA3qJVIayJA/GlODZPqM6cA.jpg?size=820x496&quality=96&sign=8d8ec4449c0456209d97e8ee953fdecb&type=album" alt="" srcset="">
+                    <ol>
+                        Минивэн, выпускаемый японской компанией Toyota с 1997 года. Своё название автомобиль получил в честь легендарного древнего тосканского города Сиена. Модель, 
+                        в основном, ориентирована на североамериканский рынок, но продаётся также в Южной Корее и некоторых других странах. Автомобиль первого поколения был меньше аналогов, 
+                        но модель второго поколения, появившаяся 2003 году, стала больше. 
+                        Тогда же был представлен и полноприводный вариант, Sienna является единственным минивэном на рынке Северной Америки имеющим такое исполнение.
+                    </ol>
+              </div>
+          </div>
+            <li>
+                Toyota Alphard - (2.000.000 руб.)
+            </li>
+        <div class="about-images">
+            <img  class="img4" src="https://sun9-71.userapi.com/impg/9Vs9stnpHuV1bsyHncfFaEcLTk0SPinJg8y_sw/v_o5q61qEA0.jpg?size=759x510&quality=96&sign=bb97e7e6bfe6ca8a2a4a7e8d2f420e2d&type=album" alt="" srcset="">
                 <ol>
-                    <li>
-                        Доступные цены
-                    </li>
-                    <li>
-                        Сиситемы скидок
-                    </li>
-                    <li>
-                        Огромный ассортимент
-                    </li>
-                    <li>
-                        Более 10 лет на рынке
-                    </li>
-                    <li>
-                        Филиалы по всей стране
-                    </li>
+                    Пятидверный минивэн, выпускаемый компанией Toyota Motor Corporation с мая 2002 года. Назван в честь яркой звезды Альфард в созвездии Гидры. Производителем позиционируется как минивэн высшего класса.
+                    Интересный факт: Конкурентами Alphard считаются Mazda MPV, Nissan Elgrand в третьем и Honda Odyssey в пятом поколениях.
                 </ol>
-                <div class="about-images">
-                    <div class="about-images">
-                        <img class "img1" src="https://carakoom.com/data/wall/787/610b2547.jpg">
-                    </div>
-                    <div class="about-images">
-                        <img class "img2" src="https://domvdorogu.ru/_vehicles/Hymer_Exsis-t_580_2020/additional_pic1_big.jpg">
-                    </div>
-                </div>
+            </div>
+            <li>
+                Toyota Sienna - (1.000.000 руб.)
+            </li>
+        <div class="about-images">
+            <img  class="img5" src="https://sun9-53.userapi.com/impg/YedzabaNJYQFuNqg3vvNr24MJSjZdL3QUbERpA/Aw-VfPaEMMI.jpg?size=827x463&quality=96&sign=227562adbe5ef33299d09087dc6ec94d&type=album" alt="" srcset="">
+                <ol>
+                    Компания Toyota немного обновила минивэн Sienna на новый модельный год и уже готова к началу его продаж. Популярный в Америке большой семейный автомобиль обрел легкие косметические доработки, добавившие ему привлекательности, и получил переоформленное внутреннее убранство. 
+                    Базовую комплектацию дополнили новым оборудованием, а в списке опций также произошли кое-какие перемены. Техническая начинка минивэна не изменилась, и он по-прежнему будет оснащаться 3,5-литровой «шестеркой» мощностью 266 лошадиных сил.
+                </ol>
             </div>
         </div>
+        </ol>
+        <div id="about3">
+            <div class="title3">
+                Контакты
+            </div>
+            <div class="title4">
+                Директор магазина: +7 (900) (345)-00-12
+            </div>
+            <div class="title4">
+                Дежурный секретарь: +7 (980) (355)-01-36
+            </div>
+            <div class="title4">
+                Консультант: +7 (980) (325)-31-78
+            </div>
+            <div class="title4">
+                Механик: +7 (981) (356)-17-96
+            </div>
+            <div class="title4">
+                Поставщик: +7 (900) (100)-00-00
+            </div>
+        </div>
+      </div>
     </div>
-</body>
-<script src="./script.js"></script>
+  </body>
+  <script src="./script.js"></script>
 </html>
