--- a/Praktika/Index.html
+++ b/Praktika/Index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./landing-styles.css" />
-    <title>Автосалон минивенов</title>
+    <link rel="stylesheet" href="./styles1.css" />
+    <title>МЕТРО 2033</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
-        <div class="logo"></div>
         <div class="burger-menu">
-          <div class="nav-burger"><a href="#about">О салоне</a></div>
-          <div class="nav-burger">Цены</div>
-          <div class="nav-burger">Контакты</div>
+            <div class="nav-burger"><a href="#about">Об игре</a></div>
+            <div class="nav-burger">Сюжет</div>
+            <div class="nav-burger">Персонажи</div>
+            <div class="nav-burger">Карта</div>
         </div>
+        <div class="logo"></div>
         <div class="nav-menu">
-          <div class="nav-item"><a href="#about">О салоне</a></div>
-          <div class="nav-item">Цены</div>
-          <div class="nav-item">Контакты</div>
+          <div class="nav-item"><a href="#about">Об игре</a></div>
+          <div class="nav-item">Сюжет</div>
+          <div class="nav-item">Персонажи</div>
+          <div class="nav-item">Карта</div>
           <div class="nav-open">
             <img style="width: 30px" src="./menu.png" alt="" srcset=""  draggable="false" />
           </div>
@@ -27,10 +29,10 @@
       </div>
       <div class="content">
         <div class="van-bg">
-          <div class="van-bg-text">VANLIFE - это свобода</div>
+          <div class="van-bg-text"></div>
         </div>
         <div id="about">
-          <div class="title">О салоне</div>
+          <div class="title">Об игре</div>
           <div class="about-text">
             Наш автосалон - уникальное предприятие в РФ, в котором Вы можете
             приобрести автомобиль для путешествий!
